Request summary screen

--- a/Hawaii/UI/Storyboard/Bonus.storyboard
+++ b/Hawaii/UI/Storyboard/Bonus.storyboard
@@ -63,11 +63,20 @@
                     </view>
                     <connections>
                         <outlet property="scrollView" destination="ZW6-P5-gQl" id="zY9-wO-PyW"/>
+                        <segue destination="fQ4-PI-NPy" kind="show" identifier="showSummaryViewController" id="cGA-OY-XQX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rzr-qc-q9g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4753" y="-384"/>
+        </scene>
+        <!--Summary-->
+        <scene sceneID="cXP-1X-dJA">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Summary" id="fQ4-PI-NPy" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lu0-7y-XgO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5945" y="-459"/>
         </scene>
         <!--Request-->
         <scene sceneID="YsN-PU-mIL">
