--- a/Hawaii/UI/Storyboard/LeaveRequest.storyboard
+++ b/Hawaii/UI/Storyboard/LeaveRequest.storyboard
@@ -79,11 +79,20 @@
                     </view>
                     <connections>
                         <outlet property="scrollView" destination="Zkj-Eh-ED8" id="PRY-3W-ZiM"/>
+                        <segue destination="R1Y-Qz-g43" kind="show" identifier="showSummaryViewController" id="zhD-JT-Hx1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RFu-BU-Rde" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4948" y="-2816.0098522167491"/>
+        </scene>
+        <!--Summary-->
+        <scene sceneID="oem-hG-87L">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Summary" id="R1Y-Qz-g43" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TR0-Ho-BcS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6181" y="-2981"/>
         </scene>
         <!--Request-->
         <scene sceneID="PiL-eW-miW">
@@ -91,7 +100,7 @@
                 <viewControllerPlaceholder storyboardName="Request" id="xlg-4A-bCn" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YYx-bp-6DD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7155" y="-2933"/>
+            <point key="canvasLocation" x="6182" y="-2897"/>
         </scene>
         <!--RemainingDays-->
         <scene sceneID="nxZ-GR-fXw">
