--- a/Hawaii/UI/Controller/Cell/PublicHolidayTableViewCell.xib
+++ b/Hawaii/UI/Controller/Cell/PublicHolidayTableViewCell.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,33 +19,51 @@
                 <rect key="frame" x="0.0" y="0.0" width="62" height="60.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="TeamCalendarCollectionViewCell" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="byv-kH-Dcr">
-                        <rect key="frame" x="10" y="15" width="42" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="happy" translatesAutoresizingMaskIntoConstraints="NO" id="63Q-RZ-vOR">
-                        <rect key="frame" x="23.5" y="35.5" width="15" height="15"/>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HZx-xm-rsX">
+                        <rect key="frame" x="11" y="10" width="40.5" height="40.5"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" restorationIdentifier="TeamCalendarCollectionViewCell" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="14" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="byv-kH-Dcr">
+                                <rect key="frame" x="-1" y="5" width="42" height="20.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" priority="750" constant="20.5" id="fPp-8H-BoI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" image="happy" translatesAutoresizingMaskIntoConstraints="NO" id="63Q-RZ-vOR">
+                                <rect key="frame" x="12.5" y="25.5" width="15" height="15"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="63Q-RZ-vOR" secondAttribute="height" multiplier="1:1" id="HES-D1-jX5"/>
+                                    <constraint firstAttribute="height" priority="750" constant="15" id="ZJu-uo-D0E"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="63Q-RZ-vOR" secondAttribute="height" multiplier="1:1" id="HES-D1-jX5"/>
-                            <constraint firstAttribute="width" constant="15" id="Ijy-nU-4jq"/>
+                            <constraint firstAttribute="width" secondItem="HZx-xm-rsX" secondAttribute="height" multiplier="1:1" id="5yK-Vf-I5S"/>
+                            <constraint firstItem="63Q-RZ-vOR" firstAttribute="top" secondItem="byv-kH-Dcr" secondAttribute="bottom" id="FKU-4r-6zO"/>
+                            <constraint firstItem="byv-kH-Dcr" firstAttribute="top" secondItem="HZx-xm-rsX" secondAttribute="top" constant="5" id="U3C-2F-A9l"/>
+                            <constraint firstItem="byv-kH-Dcr" firstAttribute="centerX" secondItem="HZx-xm-rsX" secondAttribute="centerX" id="Yqr-JN-d1l"/>
+                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="63Q-RZ-vOR" secondAttribute="bottom" id="uws-kH-yID"/>
+                            <constraint firstItem="63Q-RZ-vOR" firstAttribute="centerX" secondItem="HZx-xm-rsX" secondAttribute="centerX" id="wjh-Av-WBf"/>
                         </constraints>
-                    </imageView>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="63Q-RZ-vOR" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="AQC-wu-otc"/>
-                    <constraint firstItem="63Q-RZ-vOR" firstAttribute="top" secondItem="byv-kH-Dcr" secondAttribute="bottom" id="AeD-Ia-pCR"/>
-                    <constraint firstItem="byv-kH-Dcr" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="IG5-30-OsL"/>
-                    <constraint firstItem="byv-kH-Dcr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="aqX-B0-BtH"/>
+                    <constraint firstItem="HZx-xm-rsX" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Sea-Yz-rnb"/>
+                    <constraint firstItem="HZx-xm-rsX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="VRH-Is-vwh"/>
+                    <constraint firstItem="HZx-xm-rsX" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="sKC-5j-aYZ"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="dateLabel" destination="byv-kH-Dcr" id="cy8-7v-zcR"/>
                 <outlet property="imageView" destination="63Q-RZ-vOR" id="8Vv-8l-FwO"/>
+                <outlet property="roundView" destination="HZx-xm-rsX" id="LO9-qL-aZ4"/>
+                <outlet property="roundViewTopMargin" destination="VRH-Is-vwh" id="cX7-BE-waY"/>
             </connections>
-            <point key="canvasLocation" x="163" y="62.5"/>
+            <point key="canvasLocation" x="161.59999999999999" y="61.619190404797607"/>
         </tableViewCell>
     </objects>
     <resources>
