Images for tabs changed

--- a/Hawaii/UI/Controller/Cell/RequestDetailTableViewCell.xib
+++ b/Hawaii/UI/Controller/Cell/RequestDetailTableViewCell.xib
@@ -190,9 +190,9 @@
                     <constraint firstItem="Rda-Yz-vMM" firstAttribute="trailing" secondItem="kQv-mE-Odu" secondAttribute="trailing" id="bEQ-TP-OUw"/>
                     <constraint firstItem="kQv-mE-Odu" firstAttribute="leading" secondItem="IdB-vE-0uK" secondAttribute="leading" constant="14" id="cia-Bc-EUx"/>
                     <constraint firstItem="IdB-vE-0uK" firstAttribute="trailing" secondItem="amn-Lz-fUh" secondAttribute="trailing" constant="5.5" id="fX5-IA-DFk"/>
+                    <constraint firstItem="Gry-CS-jb0" firstAttribute="trailing" secondItem="Q6R-x6-Cos" secondAttribute="trailing" id="fZZ-Xp-O6J"/>
                     <constraint firstItem="IdB-vE-0uK" firstAttribute="bottom" secondItem="Gry-CS-jb0" secondAttribute="bottom" constant="16.5" id="gB2-zV-9Zj"/>
                     <constraint firstAttribute="bottom" secondItem="IdB-vE-0uK" secondAttribute="bottom" constant="5" id="hL9-1T-i8w"/>
-                    <constraint firstItem="Gry-CS-jb0" firstAttribute="trailing" secondItem="Q6R-x6-Cos" secondAttribute="trailing" id="hsZ-BH-w38"/>
                     <constraint firstItem="CjV-k9-aEj" firstAttribute="trailing" secondItem="agW-6a-dAJ" secondAttribute="trailing" id="kTm-mf-tnT"/>
                     <constraint firstItem="TIh-1i-w96" firstAttribute="leading" secondItem="IdB-vE-0uK" secondAttribute="leading" constant="14" id="nAM-BN-sHE"/>
                     <constraint firstItem="jmx-hi-4OF" firstAttribute="centerY" secondItem="H53-KI-ADV" secondAttribute="centerY" id="nnE-f2-UFv"/>
