--- a/Hawaii/UI/Storyboard/Approval.storyboard
+++ b/Hawaii/UI/Storyboard/Approval.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gc1-LA-eAL">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gc1-LA-eAL">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -45,7 +45,7 @@
         <scene sceneID="KQQ-i8-ZFU">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gc1-LA-eAL" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Approval" image="airplane_mode_on" id="KeV-4t-7VP"/>
+                    <tabBarItem key="tabBarItem" title="Approval" image="00 approval white 02" id="KeV-4t-7VP"/>
                     <toolbarItems/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="aJX-lh-v0C">
@@ -63,6 +63,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="airplane_mode_on" width="30" height="30"/>
+        <image name="00 approval white 02" width="48" height="32"/>
     </resources>
 </document>
