--- a/Hawaii/UI/Storyboard/Employee.storyboard
+++ b/Hawaii/UI/Storyboard/Employee.storyboard
@@ -194,6 +194,13 @@
                                                     <constraint firstItem="pxO-bJ-pA2" firstAttribute="centerX" secondItem="UXb-JU-fla" secondAttribute="centerX" id="aHT-28-xCK"/>
                                                 </constraints>
                                             </stackView>
+                                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aTa-8c-ape">
+                                                <rect key="frame" x="-24" y="-83" width="240" height="128"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                                <connections>
+                                                    <segue destination="6Cu-aK-zF4" kind="embed" identifier="showSearchUser" id="3vm-dB-wjp"/>
+                                                </connections>
+                                            </containerView>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
@@ -334,6 +341,19 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="til-QS-7qz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2945" y="975"/>
+        </scene>
+        <!--Search Users Base View Controller-->
+        <scene sceneID="5mu-oY-opb">
+            <objects>
+                <viewController id="6Cu-aK-zF4" customClass="SearchUsersBaseViewController" customModule="Hawaii" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AmX-2g-Xnt">
+                        <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="D41-MH-Iyk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
     <resources>
