Rename Employee storyboard to TeamCalendar

--- a/Hawaii/Base.lproj/Main.storyboard
+++ b/Hawaii/Base.lproj/Main.storyboard
@@ -96,10 +96,10 @@
             </objects>
             <point key="canvasLocation" x="1657" y="-183"/>
         </scene>
-        <!--Employee-->
+        <!--TeamCalendar-->
         <scene sceneID="RbR-uN-baM">
             <objects>
-                <viewControllerPlaceholder storyboardName="Employee" id="RzC-n6-LsE" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="TeamCalendar" id="RzC-n6-LsE" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="os8-Ts-lOG"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b6r-HK-Wod" userLabel="First Responder" sceneMemberID="firstResponder"/>
